too wide content for mobile fixed

--- a/base_page/static/css/base_map.css
+++ b/base_page/static/css/base_map.css
@@ -365,6 +365,9 @@ ul.breadcrumb li.separator {
     .hidden_for_large {
         display: inherit;
     }
+    header .span_right {
+        display: none;
+    }
     footer ul.nav {
         position: absolute;
         bottom: 0;
